--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
             This is EnergyFret. "A hub for clean energy".
           </h1>
           <button class="btn btn-lg btn-light download-buttons">
-            <i class="fa-brands fa-apple"></i> Download
+            <i class="fab fa-brands fa-apple"></i> Download
           </button>
           <button class="btn btn-lg btn-outline-light download-buttons">
-            <i class="fa-brands fa-google-play"></i> Download
+            <i class="fab fa-brands fa-google-play"></i> Download
           </button>
         </div>
         <!-- Company Logo -->
@@ -100,7 +100,7 @@
     <div class="container-fluid feature-div">
       <div class="row">
         <div class="col-md-4 feature-elements">
-          <i class="fa-solid fa-dumbbell fa-4x feature-icons"></i>
+          <i class="fas fa-solid fa-dumbbell fa-4x feature-icons"></i>
           <h2 class="feature-content handwriting-style">
             Durability of the equipments.
           </h2>
@@ -109,7 +109,7 @@
           </p>
         </div>
         <div class="col-md-4 feature-elements">
-          <i class="fa-brands fa-servicestack fa-4x feature-icons"></i>
+          <i class="fab fa-brands fa-servicestack fa-4x feature-icons"></i>
           <h2 class="feature-content">
             Prompt, Efficient and Regular servicing.
           </h2>
@@ -119,7 +119,7 @@
           </p>
         </div>
         <div class="col-md-4 feature-elements">
-          <i class="fa-solid fa-hard-hat fa-4x feature-icons"></i>
+          <i class="fas fa-solid fa-hard-hat fa-4x feature-icons"></i>
           <h2 class="feature-content">
             Better Safety and Environment Friendly.
           </h2>
@@ -277,10 +277,10 @@
         So get ahead with life and be a saviour for environment.
       </h3>
       <button class="btn btn-lg btn-light download-buttons">
-        <i class="fa-brands fa-apple"></i> Download
+        <i class="fab fa-brands fa-apple"></i> Download
       </button>
       <button class="btn btn-lg btn-light download-buttons">
-        <i class="fa-brands fa-google-play"></i> Download
+        <i class="fab fa-brands fa-google-play"></i> Download
       </button>
     </div>
 
